tugas 17 Novan Tiano

--- a/Tugas14-RESTAPIAdonis/package.json
+++ b/Tugas14-RESTAPIAdonis/package.json
@@ -16,11 +16,13 @@
     "youch-terminal": "^1.1.1"
   },
   "dependencies": {
+    "@adonisjs/auth": "^8.0.9",
     "@adonisjs/core": "^5.3.4",
     "@adonisjs/lucid": "^16.0.2",
     "@adonisjs/repl": "^3.1.6",
     "luxon": "^2.0.2",
     "mysql": "^2.18.1",
+    "phc-bcrypt": "^1.0.7",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.20"
