Selesai : tugas 18 Novan Tiano

--- a/Tugas14-RESTAPIAdonis/package.json
+++ b/Tugas14-RESTAPIAdonis/package.json
@@ -19,7 +19,9 @@
     "@adonisjs/auth": "^8.0.9",
     "@adonisjs/core": "^5.3.4",
     "@adonisjs/lucid": "^16.0.2",
+    "@adonisjs/mail": "^7.2.4",
     "@adonisjs/repl": "^3.1.6",
+    "@adonisjs/view": "^6.1.1",
     "luxon": "^2.0.2",
     "mysql": "^2.18.1",
     "phc-bcrypt": "^1.0.7",
